# aetura

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
engine/: aetura-engine.spec  agent_test.py  ai_engine.py  browser_engine.py  config.py  dev_cache.json  explore_test.py  main.py  orchestrator.py  prompts.py  pyproject.toml  requirements.txt  services.py  test_vision.py  workflows.py
engine/dom/: __init__.py  parser.py  strategy.py
engine/models/: script.py
engine/tests/: __init__.py  conftest.py  test_config.py  test_dom.py  test_models.py  test_selector_builder.py  test_services.py  test_tool_registry.py  test_tools.py
engine/tools/: __init__.py  base.py  dom_extractor.py  manager.py  selector_builder.py  tools.py
engine/workflows_impl/: __init__.py  base.py  draft.py  mocks.py  record.py  resume.py  settings.py
frontend/: README.md  components.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  Router.tsx  index.css  main.tsx
frontend/src/components/: theme-toggle.tsx  window-resize-grips.tsx  window-titlebar.tsx
frontend/src/config/: constants.ts  tools.tsx
frontend/src/hooks/: useEditor.ts
frontend/src/lib/: editorTimeline.ts  index.ts  numbers.ts  time.ts  validation.ts
frontend/src/pages/: editor.tsx  home.tsx  recordings.tsx  settings.tsx
frontend/src/store/: useEditorStore.ts  useSettingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  dialogs.rs  errors.rs  ffmpeg.rs  filters.rs  lib.rs  models.rs  validation.rs
(+46 files in other folders)
