[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "browser-use>=0.11.13",
    "fastapi>=0.136.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langsmith>=0.8.0",
    "openai>=2.33.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]
